--- a/public/about.html
+++ b/public/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Battle Ship</title>
+		<title>Battle Ship - About</title>
 		<meta charset="utf-8">
 		<!-- Author: Chris Casola -->
 		<!-- Author: Chris Page -->
