Added basic shot support.

--- a/public/battle.html
+++ b/public/battle.html
@@ -18,10 +18,10 @@
 		</header>
 		<section id='mainContent'>
 			<p>So we're going to write some stuff here...</p>
-			<canvas id='opponentBoard'>
+			<canvas id='opponentBoard' width="350" height="350">
 				
 			</canvas>
-			<canvas id='myBoard'>
+			<canvas id='myBoard' width="350" height="350">
 				
 			</canvas>
 			<script>initCanvas();</script>
