--- a/public/battle.html
+++ b/public/battle.html
@@ -10,6 +10,9 @@
 		<link rel="stylesheet" type="text/css" href="/style/canvas.css" />
 		<script src="/scripts/menubar.js" type="text/javascript"></script>
 		<script src="/scripts/canvas.js" type="text/javascript"></script>
+		<script src="/scripts/objects.js" type="text/javascript"></script>
+		<script src="/scripts/game_play.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<header>
