--- a/public/login.html
+++ b/public/login.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Battle Ship - Casola vs. Page</title>
+		<title>Battle Ship - Login</title>
 		<meta charset="utf-8">
 		<!-- Author: Chris Casola -->
 		<!-- Author: Chris Page -->
 		<!-- Assignment URL: http://cs4241-bs.herokuapp.com/ -->
 		<link rel="stylesheet" type="text/css" href="/style/main.css" />
-		<link rel="stylesheet" type="text/css" href="/style/canvas.css" />
 		<script src="/scripts/menubar.js" type="text/javascript"></script>
-		<script src="/scripts/canvas.js" type="text/javascript"></script>
-		<script src="/scripts/objects.js" type="text/javascript"></script>
-		<script src="/scripts/game_play.js" type="text/javascript"></script>
+		<script src="/scripts/login.js" type="text/javascript"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 	</head>
 	<body>
@@ -20,13 +17,11 @@
 			<h1>Battle Ship</h1>
 		</header>
 		<section id='mainContent'>
-			<p>So we're going to write some stuff here...</p>
-			<canvas id='opponentBoard' width="350" height="350">
-				
-			</canvas>
-			<canvas id='myBoard' width="350" height="350">
-				
-			</canvas>
+			<label>Email: </label>
+			<input type='text' id='email' name='email' />
+			<label>Password: </label>
+			<input type='password' id='password' name='password' />
+			<input type='button' id='login' value='Login' />
 		</section>
 	</body>
 </html>
