Added support for displaying Ships on the board and sending them to the server.  The server does not yet do anything with them except echo them back.

--- a/public/battle.html
+++ b/public/battle.html
@@ -27,6 +27,17 @@
 			<canvas id='myBoard' width="350" height="350">
 				
 			</canvas>
+			<section id='orientationSelection'>
+				<p><input name='orientation' type='radio' id='vertical'>Vertical</input></p>
+				<p><input name='orientation' type='radio' id='horizontal'>Horizontal</input></p>
+			</section>
+			<section id='shipSelection'>
+				<p><input name='shiptype' type='radio' id='carrier'>Carrier</input></p>
+				<p><input name='shiptype' type='radio' id='battleship'>Battleship</input></p>
+				<p><input name='shiptype' type='radio' id='submarine'>Submarine</input></p>
+				<p><input name='shiptype' type='radio' id='cruiser'>Cruiser</input></p>
+				<p><input name='shiptype' type='radio' id='destroyer'>Destroyer</input></p>
+			</section>
 		</section>
 	</body>
 </html>
