--- a/public/test2.html
+++ b/public/test2.html
@@ -2,12 +2,12 @@
 <html>
 <body>
 
-<canvas id="myCanvas" width="200" height="100" style="border:1px solid #c3c3c3;">
+<canvas id="rightCanvas" width="200" height="100" style="border:1px solid #c3c3c3;">
 Your browser does not support the canvas element.
 </canvas>
 
 <script type="text/javascript">
-var c=document.getElementById("myCanvas");
+var c=document.getElementById("rightCanvas");
 var ctx=c.getContext("2d");
 ctx.fillStyle="#FF0000";
 ctx.beginPath();
