Started on detecting overlapping ships.

--- a/public/battle.html
+++ b/public/battle.html
@@ -32,11 +32,11 @@
 				<p><input name='orientation' type='radio' id='horizontal'>Horizontal</input></p>
 			</section>
 			<section id='shipSelection'>
-				<p><input name='shiptype' type='radio' id='carrier'>Carrier</input></p>
-				<p><input name='shiptype' type='radio' id='battleship'>Battleship</input></p>
-				<p><input name='shiptype' type='radio' id='submarine'>Submarine</input></p>
-				<p><input name='shiptype' type='radio' id='cruiser'>Cruiser</input></p>
-				<p><input name='shiptype' type='radio' id='destroyer'>Destroyer</input></p>
+				<p><input name='stype' type='radio' id='carrier'>Carrier</input></p>
+				<p><input name='stype' type='radio' id='battleship'>Battleship</input></p>
+				<p><input name='stype' type='radio' id='submarine'>Submarine</input></p>
+				<p><input name='stype' type='radio' id='cruiser'>Cruiser</input></p>
+				<p><input name='stype' type='radio' id='destroyer'>Destroyer</input></p>
 			</section>
 		</section>
 	</body>
