--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,11 @@
 		<!-- Author: Chris Page -->
 		<!-- Assignment URL: http://cs4241-bs.herokuapp.com/ -->
 		<link rel="stylesheet" type="text/css" href="/style/main.css" />
+		<link rel="stylesheet" type="text/css" href="/style/overlay.css" />
+		<link rel="stylesheet" type="text/css" href="/style/login.css" />
 		<script src="/scripts/menubar.js" type="text/javascript"></script>
+		<script src="/scripts/login.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<header>
