--- a/public/about.html
+++ b/public/about.html
@@ -7,7 +7,12 @@
 		<!-- Author: Chris Page -->
 		<!-- Assignment URL: http://cs4241-bs.herokuapp.com/ -->
 		<link rel="stylesheet" type="text/css" href="/style/main.css" />
+		<link rel="stylesheet" type="text/css" href="/style/overlay.css" />
+		<link rel="stylesheet" type="text/css" href="/style/login.css" />
+		<link rel="stylesheet" type="text/css" href="/style/register.css" />
 		<script src="/scripts/menubar.js" type="text/javascript"></script>
+		<script src="/scripts/login.js" type="text/javascript"></script>
+		<script src="/scripts/register.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<header>
