--- a/public/battle.html
+++ b/public/battle.html
@@ -8,7 +8,12 @@
 		<!-- Assignment URL: http://cs4241-bs.herokuapp.com/ -->
 		<link rel="stylesheet" type="text/css" href="/style/main.css" />
 		<link rel="stylesheet" type="text/css" href="/style/canvas.css" />
+		<link rel="stylesheet" type="text/css" href="/style/overlay.css" />
+		<link rel="stylesheet" type="text/css" href="/style/login.css" />
+		<link rel="stylesheet" type="text/css" href="/style/register.css" />
 		<script src="/scripts/menubar.js" type="text/javascript"></script>
+		<script src="/scripts/login.js" type="text/javascript"></script>
+		<script src="/scripts/register.js" type="text/javascript"></script>
 		<script src="/scripts/canvas.js" type="text/javascript"></script>
 		<script src="/scripts/objects.js" type="text/javascript"></script>
 		<script src="/scripts/game_play.js" type="text/javascript"></script>
