--- a/public/mybattles.html
+++ b/public/mybattles.html
@@ -8,7 +8,12 @@
 		<!-- Assignment URL: http://cs4241-bs.herokuapp.com/ -->
 		<link rel="stylesheet" type="text/css" href="/style/main.css" />
 		<link rel="stylesheet" type="text/css" href="/style/canvas.css" />
+		<link rel="stylesheet" type="text/css" href="/style/overlay.css" />
+		<link rel="stylesheet" type="text/css" href="/style/login.css" />
+		<link rel="stylesheet" type="text/css" href="/style/register.css" />
 		<script src="/scripts/menubar.js" type="text/javascript"></script>
+		<script src="/scripts/login.js" type="text/javascript"></script>
+		<script src="/scripts/register.js" type="text/javascript"></script>
 		<script src="/scripts/battles.js" type="text/javascript"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 	</head>
@@ -18,7 +23,34 @@
 			<h1>Battle Ship</h1>
 		</header>
 		<section id='mainContent'>
-			
+			<table>
+				<thead>
+					<tr>
+						<th>Player 1</th><th>Player 2</th><th>Start Date</th><th>End Date</th>
+					</tr>
+				</thead>
+				<tr>
+					<td>1</td><td>2</td><td>21:00 &mdash; March 3, 2012</td><td></td>
+				</tr>
+				<tr>
+					<td>1</td><td>2</td><td>21:00 &mdash; March 3, 2012</td><td></td>
+				</tr>
+				<tr>
+					<td>1</td><td>2</td><td>21:00 &mdash; March 3, 2012</td><td></td>
+				</tr>
+				<tr>
+					<td>1</td><td>2</td><td>21:00 &mdash; March 3, 2012</td><td></td>
+				</tr>
+				<tr>
+					<td>1</td><td>2</td><td>21:00 &mdash; March 3, 2012</td><td></td>
+				</tr>
+				<tr>
+					<td>1</td><td>2</td><td>21:00 &mdash; March 3, 2012</td><td></td>
+				</tr>
+				<tr>
+					<td>1</td><td>2</td><td>21:00 &mdash; March 3, 2012</td><td></td>
+				</tr>
+			</table>
 		</section>
 	</body>
 </html>
