menubar.js rewrite almost complete. Just need to implement new functionality.

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<header>
-			<script>generateTopMenu(getCurrPage());</script>
+			<script>setMenuCurrentPage(getCurrPage());generateTopMenu();</script>
 			<h1>Battle Ship</h1>
 		</header>
 		<section id='mainContent'>
