--- a/public/mybattles.html
+++ b/public/mybattles.html
@@ -24,6 +24,8 @@
 		</header>
 		<section id='mainContent'>
 			<h1>My Battles</h1>
+				<p id='createBattle'>Begin a New Battle</p>
+				<section id='createBattleForm'></section>
 		</section>
 	</body>
 </html>
