--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -10,9 +10,11 @@
 		<link rel="stylesheet" type="text/css" href="/style/overlay.css" />
 		<link rel="stylesheet" type="text/css" href="/style/login.css" />
 		<link rel="stylesheet" type="text/css" href="/style/register.css" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 		<script src="/scripts/menubar.js" type="text/javascript"></script>
 		<script src="/scripts/login.js" type="text/javascript"></script>
 		<script src="/scripts/register.js" type="text/javascript"></script>
+		<script src="/scripts/leaderboard.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<header>
@@ -20,7 +22,18 @@
 			<h1>Battle Ship</h1>
 		</header>
 		<section id='mainContent'>
-			<p>So we're going to write some stuff here...</p>
+			<table>
+				<h1>Leaderboard</h1>
+				<thead>
+					<tr>
+						<td>Rank</td>
+						<td>Name</td>
+						<td>Number of Wins</td>
+					</tr>
+				</thead>
+				<tbody id="leaderboardTbody">
+				</tbody>
+			</table>
 		</section>
 	</body>
 </html>
