leaderboard.html td converted to th

--- a/public/leaderboard.html
+++ b/public/leaderboard.html
@@ -26,9 +26,9 @@
 			<table>
 				<thead>
 					<tr>
-						<td>Rank</td>
-						<td>Name</td>
-						<td>Number of Wins</td>
+						<th>Rank</th>
+						<th>Name</th>
+						<th>Number of Wins</th>
 					</tr>
 				</thead>
 				<tbody id="leaderboardTbody">
