--- a/public/battle.html
+++ b/public/battle.html
@@ -17,6 +17,7 @@
 		<script src="/scripts/canvas.js" type="text/javascript"></script>
 		<script src="/scripts/objects.js" type="text/javascript"></script>
 		<script src="/scripts/game_play.js" type="text/javascript"></script>
+		<script src="/scripts/alert.js" type="text/javascript"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 	</head>
 	<body>
@@ -25,7 +26,7 @@
 			<h1>Battle Ship</h1>
 		</header>
 		<section id='mainContent'>
-			<p>So we're going to write some stuff here...</p>
+			<p id='alert'>Alert</p>
 			<canvas id='opponentBoard' width="350" height="350">
 				
 			</canvas>
