--- a/public/mybattles.html
+++ b/public/mybattles.html
@@ -15,6 +15,7 @@
 		<script src="/scripts/login.js" type="text/javascript"></script>
 		<script src="/scripts/register.js" type="text/javascript"></script>
 		<script src="/scripts/battles.js" type="text/javascript"></script>
+		<script src="/scripts/alert.js" type="text/javascript"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 	</head>
 	<body>
@@ -23,6 +24,7 @@
 			<h1>Battle Ship</h1>
 		</header>
 		<section id='mainContent'>
+			<p id='alert'>Alert</p>
 		</section>
 	</body>
 </html>
