Fixed issues with alert and turns.

--- a/public/mybattles.html
+++ b/public/mybattles.html
@@ -11,11 +11,11 @@
 		<link rel="stylesheet" type="text/css" href="/style/overlay.css" />
 		<link rel="stylesheet" type="text/css" href="/style/login.css" />
 		<link rel="stylesheet" type="text/css" href="/style/register.css" />
+		<script src="/scripts/alert.js" type="text/javascript"></script>
 		<script src="/scripts/menubar.js" type="text/javascript"></script>
 		<script src="/scripts/login.js" type="text/javascript"></script>
 		<script src="/scripts/register.js" type="text/javascript"></script>
 		<script src="/scripts/battles.js" type="text/javascript"></script>
-		<script src="/scripts/alert.js" type="text/javascript"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 	</head>
 	<body>
@@ -23,8 +23,10 @@
 			<script>generateTopMenu();</script>
 			<h1>Battle Ship</h1>
 		</header>
-		<section id='mainContent'>
+		<section id='alertWindow'>
 			<p id='alert'>Alert</p>
+		</section>
+		<section id='mainContent'>
 		</section>
 	</body>
 </html>
