Worked on some static content, added icon files.

--- a/public/about.html
+++ b/public/about.html
@@ -20,7 +20,8 @@
 			<h1>Battle Ship</h1>
 		</header>
 		<section id='mainContent'>
-			<p>So we're going to write some stuff here...</p>
+			<p>This webapp is the result of our <a href="http://gfp-4241-s12.herokuapp.com/project/index.html">project</a> for CS4241-D12 Webware. Our team contains the humans Chris Casola and Chris Page.</p>
+			<p>Our battleship game uses ruby, javascript, AJAX, jQuery, PostgreSQL, and Sinatra.</p>
 		</section>
 	</body>
 </html>
