--- a/public/login.html
+++ b/public/login.html
@@ -6,6 +6,7 @@
 		<!-- Author: Chris Casola -->
 		<!-- Author: Chris Page -->
 		<!-- Assignment URL: http://cs4241-bs.herokuapp.com/ -->
+		<!-- This file is deprecated -->
 		<link rel="stylesheet" type="text/css" href="/style/main.css" />
 		<script src="/scripts/menubar.js" type="text/javascript"></script>
 		<script src="/scripts/login.js" type="text/javascript"></script>
