Added content to the homepage.

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,29 @@
 			<h1>Battle Ship</h1>
 		</header>
 		<section id='mainContent'>
-			<p>So we're going to write some stuff here...</p>
+			<h1>Introducing BattleShip!!!</h1>
+			<p><span class='italic'>Designed by Chris Page and Chris Casola.</span></p>
+			<section id="instructions">
+				<h2>Instructions</h2>
+				<ol>
+					<li>If this is your first visit, go ahead and click the register
+						button in the top right corner and sign up for an account.
+					</li>
+					<li>
+						After you register, you can log in.
+					</li>
+					<li>To start playing a game, go to the "My Battles" page. This
+						page shows all the battles you have participated in and allows
+						you to start a new battle.
+					</li>
+					<li>
+						You can start a new battle by entering
+						another player's name or by clicking the "Find an Online Player"
+						button.  If you ask the game to find you a match you will be notified
+						when a match is found by a popup on the "My Battles" page.
+					</li>
+				</ol>
+			</section>
 		</section>
 	</body>
 </html>
